init swagger documentation
