# controller/ticket_controller.go
@@ -10,12 +10,12 @@ import (
 // GetPayments godoc
 // @Summary Get Payments
 // @Description Get all payments
-// @Tags Customer/Payment
+// @Tags Customer
 // @Accept json
 // @Produce json
 // @Param customerId path int true "Customer ID"
 // @Success 200 {object} models.TicketsResponse
-// @Router /customer/{customerId}/ticket/payments [get]
+// @Router /customer/{customerId}/tickets [get]
 func GetPayments(c *gin.Context) {
 	// customerId := c.Param("customerId")
 
@@ -34,16 +34,16 @@ func GetPayments(c *gin.Context) {
 // GetPayment godoc
 // @Summary Get Payment
 // @Description Get payment
-// @Tags Customer/Payment
+// @Tags Customer
 // @Accept json
 // @Produce json
 // @Param customerId path int true "Customer ID"
-// @Param paymentId path int true "Customer ID"
+// @Param ticketId path int true "Customer ID"
 // @Success 200 {object} models.TicketResponse
-// @Router /customer/{customerId}/ticket/payments/{paymentId} [get]
+// @Router /customer/{customerId}/ticket/{ticketId} [get]
 func GetPayment(c *gin.Context) {
 	// customerId := c.Param("customerId")
-	// paymentId := c.Param("paymentId")
+	// ticketId := c.Param("ticketId")
 
 	var ticket models.Ticket
 	responseData := models.TicketResponse{
@@ -60,16 +60,17 @@ func GetPayment(c *gin.Context) {
 // ConfirmPayment godoc
 // @Summary Confirm Payment
 // @Description Confirm payment with payment_id.
-// @Tags Customer/Payment
-// @Param payment_id path string true "payment id"
+// @Tags Customer
+// @Param customerId path int true "Customer ID"
+// @Param ticketId path string true "payment id"
 // @Accept json
 // @Produce json
 // @Success 200 {object} models.TicketResponse
-// @Router /customer/{customerId}/ticket/payments/{payment_id} [post]
+// @Router /customer/{customerId}/ticket/{ticketId}/payment [post]
 func ConfirmPayment(c *gin.Context) {
 
 	// customerId := c.Param("customerId")
-	// paymentId := c.Param("paymentId")
+	// ticketId := c.Param("ticketId")
 
 	var ticket models.Ticket
 	responseData := models.TicketResponse{
